--- a/admin/adminpage.css
+++ b/admin/adminpage.css
@@ -1,5 +1,38 @@
 * {
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  overflow: auto;
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  margin-top: 2rem;
+}
+
+.user-container {
+  position: absolute;
+  display: block;
+  border: 6px solid blue;
+  width: 85%;
+  margin-top: 10rem;
+}
+
+.user {
+  display: flex;
+  justify-content: flex-start;
+  align-content: space-between;
+  gap: 5rem;
+  border: 3px solid rgb(81, 255, 0);
+  width: 100%;
+  margin-top: 2rem;
 }
