--- a/admin/adminpage.css
+++ b/admin/adminpage.css
@@ -30,14 +30,15 @@ h1 {
 
 .user {
   display: flex;
-  justify-content: space-evenly;
-  align-content: flex-start;
+  justify-content: flex-start;
   border: 3px solid rgb(80, 80, 80);
   width: 90%;
+  gap: 0.8rem;
   margin: 2rem;
 }
 
 .user p{
     font-size: 1.5rem;
+    margin: 0.5rem;
 }
 
